all: disable animations in all accordions - ie8 was breaking it

--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -312,7 +312,8 @@
         autoHeight : false,
         navigation : true,
         header     : 'fieldset legend',
-        collapsible: true
+        collapsible: true,
+        animated   : false
       });
 */
       addTabsNavigation(".fieldset-group", "span");
