--- a/plugins/registration/app/views/registration/index.rhtml
+++ b/plugins/registration/app/views/registration/index.rhtml
@@ -29,7 +29,8 @@
        autoHeight : false,
        navigation : true,
        collapsible: true,
-       header     : 'fieldset legend'
+       header     : 'fieldset legend',
+       animated   : false
     });
     $(".accordion").accordion('activate',false);
   });
