--- a/plugins/status/app/views/status/edit.html.erb
+++ b/plugins/status/app/views/status/edit.html.erb
@@ -63,7 +63,8 @@
     $(document).ready(function(){
       $(".accordion").accordion({
          navigation : true,
-         header     : 'fieldset legend'
+         header     : 'fieldset legend',
+         animated   : false
       });
     });
   <% end %>
