--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -36,7 +36,8 @@
         autoHeight : false,
         navigation : true,
         collapsible: true,
-        header     : 'div.list-fieldset div.list-fieldset-header'
+        header     : 'div.list-fieldset div.list-fieldset-header',
+        animated   : false
       });
       $(".accordion").accordion('activate',false);
     });
