--- a/plugins/users/app/views/groups/index.html.erb
+++ b/plugins/users/app/views/groups/index.html.erb
@@ -1,23 +1,3 @@
-<!--
-# Copyright (c) 2009-2010 Novell, Inc.
-# 
-# All Rights Reserved.
-# 
-# This program is free software; you can redistribute it and/or modify it
-# under the terms of version 2 of the GNU General Public License
-# as published by the Free Software Foundation.
-# 
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-# GNU General Public License for more details.
-# 
-# You should have received a copy of the GNU General Public License
-# along with this program; if not, contact Novell, Inc.
-# 
-# To contact Novell about this file by physical or electronic mail,
-# you may find current contact information at www.novell.com
--->
 <% content_for :head do %>
 <%= javascript_include_tag "group_members.js" %>
 <%= javascript_include_tag "select_dialog.js" %>
@@ -54,7 +34,7 @@
       unselected_title : '<%= _('Available Members') %>',
       tooltip : '<%= _('Click user names to select/unselect members') %>',
       loadItems : function (dialogId) { 
-        return $('#groupForm_'+dialogId+' #group_members_string')[0].value.split(",")
+        if return $('#groupForm_'+dialogId+' #group_members_string')[0].value.split(",")
       },
       storeItems : function (dialogId, items) { 
         $('#groupForm_'+dialogId+' #group_members_string')[0].value = items.join(",");
@@ -79,7 +59,8 @@
          autoHeight : false,
          navigation : true,
          collapsible: true,
-         header     : 'div.list-fieldset div.list-fieldset-header'
+         header     : 'div.list-fieldset div.list-fieldset-header',
+         animated   : false
       });
 
       $(".accordion").accordion('activate', false);
