users: disable accordion animations - ie8 was breaking it

--- a/plugins/users/app/views/users/index.html.erb
+++ b/plugins/users/app/views/users/index.html.erb
@@ -111,7 +111,8 @@
          autoHeight : false,
          navigation : true,
          collapsible: true,
-         header     : 'div.list-fieldset div.list-fieldset-header'
+         header     : 'div.list-fieldset div.list-fieldset-header',
+         animated   : false
       });
 
       $(".accordion").accordion('activate', false);
