--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -849,3 +849,36 @@ div#browserWarning {
   padding: 5px 0px 5px 0px;
 }
 
+/* styles for select dialogs */
+.select-dialog-item {
+  float: left;
+  width: 8em;
+}
+
+.select-dialog-item:hover {
+  font-weight : bold;
+}
+
+.select-tooltip {
+  color: #888888;
+  font-size: 0.8em;
+  font-weight: bold;
+  display: block;
+  display: none;
+}
+
+.select-tooltip:hover {
+  color: #222222;
+}
+
+.dialog-container {
+  min-height: 5em;
+}
+
+.dialog-container div {
+  display: block;
+}
+
+.dialog-container h2 {
+  display: block;
+}
