--- a/plugins/software/app/views/patch_updates/index.html.erb
+++ b/plugins/software/app/views/patch_updates/index.html.erb
@@ -29,7 +29,7 @@
     option[value=optional]:before { content:url('/icons/kupdateapplet_optional.png'); }
 
   </style>
-  <div class='plugin-icon'><img src='/icons/yast-online_update.png'/><%=_("Updates") %></div>
+  <div class='plugin-icon'><img alt="yast-online_update" src='/icons/yast-online_update.png'/><%=_("Updates") %></div>
   <div class='plugin-content grid_12'>
   <div class="loading"></div>
   <% if @patch_updates.empty? %>
