- fixed HTML errors detected by rubygem-tidy

--- a/plugins/users/app/views/users/index.html.erb
+++ b/plugins/users/app/views/users/index.html.erb
@@ -136,7 +136,7 @@ function disable(which){
 <% end %>
 
 <% end %>
-<div class='plugin-icon'><img src='/icons/yast-users.png'/><%=_("Users")%></div>
+<div class='plugin-icon'><img alt="yast-users" src='/icons/yast-users.png'/><%=_("Users")%></div>
 <div class="plugin-content grid_12">
 
 <form action="#" id="quicksearch" class="pad1_2em">
