--- a/plugins/users/app/views/users/index.html.erb
+++ b/plugins/users/app/views/users/index.html.erb
@@ -167,60 +167,64 @@ function disable(which){
 
 	<tr><td>
           <div class="label"><%=_("Full Name")%></div>
-	</td><td>
+	</td><td colspan=2>
           <%= f.text_field :cn , :disabled => disabled, :onblur => "propose_login(this);" %>
 	</td></tr>
 
 	<tr><td>
           <div class="label"><%=_("Login Name")%></div>
-	</td><td>
+	</td><td colspan=2>
           <%= f.text_field :uid, :disabled => disabled, :onblur => "$('#form_"+user.uid+"').validate().element('#user_uid') && propose_home(this);", :class => "required" %>
           <%= f.text_field :id, :class => "hidden" %>
 	</td></tr>
 
 	<tr><td>
           <div class="label"><%=_("Password")%></div>
-	</td><td>
+	</td><td colspan=2>
           <%= f.password_field :user_password, :onkeyup => "$('#form_"+user.uid+"').validate().element('#user_user_password');", :disabled => disabled %>
 	</td></tr>
 
 	<tr><td>
           <div class="label"><%=_("Confirm Password")%></div>
-	</td><td>
+	</td><td colspan=2>
           <%= f.password_field :user_password2, :disabled => disabled, :equalTo => "#user_user_password", :onkeyup => "$('#form_"+user.uid+"').validate().element('#user_user_password2');" %>
 	  <label for="user_user_password2" generated="true" class="error"></label>
 	</td></tr>
 
-	<tr><td>
+	<tr><td rowspan=2>
             <div class="label"><%=_("Groups")%></div>
 	</td><td>
             <%= f.text_field :grp_string, :disabled => disabled, :onkeyup => "groups_validation(this);" %>
+	</td><td rowspan=2>
             <a href="#" class="button" onClick="select_groups_open('<%= user.uid%>');return false;"><%= _("Manage Groups") %></a>
-            <label id="groups-error" class="error"></label>
+	</td></tr>
+
+	<tr><td>
+            <label id="groups-error" class="error">error</label>
 	</td></tr>
 
 	<tr><td>
             <div class="label"><%=_("Default Group")%></div>
-	</td><td>
+	</td><td colspan=2>
             <%= f.text_field :groupname, :disabled => disabled %>
 	</td></tr>
 
 	<tr><td>
             <div class="label"><%=_("Home Directory")%></div>
-	</td><td>
+	</td><td colspan=2>
             <%= f.text_field :home_directory, :disabled => disabled %>
 	</td></tr>
 
 
 	<tr><td>
             <div class="label"><%=_("Login Shell")%></div>
-	</td><td>
+	</td><td colspan=2>
             <%= f.text_field :login_shell, :disabled => disabled %>
 	</td></tr>
 
 	<tr><td>
             <div class="label"><%=_("UID Number")%></div>
-	</td><td>
+	</td><td colspan=2>
             <%= f.text_field :uid_number, :disabled => disabled, :min => 1000, :class => "number", :onkeyup => "$('#form_"+user.uid+"').validate().element('#user_uid_number');"  %>
             <label id="uid-error" class="error"></label>
 	</td></tr>
