fixed group/new js errors

--- a/plugins/users/app/views/groups/new.html.erb
+++ b/plugins/users/app/views/groups/new.html.erb
@@ -58,10 +58,10 @@
       unselected_title : '<%= _('Available Members') %>',
       tooltip : '<%= _('Click user names to select/unselect members') %>',
       loadItems : function (dialogId) { 
-        return $('#groupForm_'+dialogId+' #group_members_string')[0].value.split(",");
+        return $('#form_'+dialogId+' #group_members_string')[0].value.split(",");
       },
       storeItems : function (dialogId, items) { 
-        $('#groupForm_'+dialogId+' #group_members_string')[0].value = items.join(",");
+        $('#form_'+dialogId+' #group_members_string')[0].value = items.join(",");
       },
       allItems : function (dialogId) { 
         return $('#all_users_string')[0].value.split(",");
@@ -72,7 +72,7 @@
 
   $(document).ready(function(){
     select_users_open = select_users_dialog();
-  }  
+  });  
 </script>
 <%
  disabled = ! ((@permissions[:groupadd] && @adding) || (@permissions[:groupmodify] && !@adding)) %>
