--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -542,7 +542,8 @@ input[type="button"] {
   font-weight: bold;
   border: 1px solid #999;
   cursor: pointer;
-  padding: 2px 10px 3px 10px;
+/*   padding: 2px 10px 3px 10px; */
+  padding: 2px 10px;
   text-decoration: none;
   text-shadow: 0 -1px 0 #bbb;
   -moz-border-radius: 4px;
@@ -560,9 +561,9 @@ input[type="button"] {
     color:#FFF;
     text-shadow: 0 -1px 0 #252525;
   }
-  input.button {
+ /* input.button {
     padding: 2px 9px;
-  }
+  }*/
   a.button[disabled],
   input[type="submit"][disabled],
   input[type="submit"][disabled]:hover {
