--- a/plugins/users/app/views/users/index.html.erb
+++ b/plugins/users/app/views/users/index.html.erb
@@ -26,7 +26,7 @@
 <%= javascript_include_tag "select_dialog.js" %>
 <%= javascript_include_tag "users.js" %>
 
- <style>
+ <style type="text/css">
     .pad1_2em {
 	padding: 1em 2em;
     }
