- fixed HTML errors detected by rubygem-tidy

--- a/plugins/administrator/app/views/administrator/index.html.erb
+++ b/plugins/administrator/app/views/administrator/index.html.erb
@@ -19,7 +19,7 @@
 # you may find current contact information at www.novell.com
 -->
 
-<div class='plugin-icon'><img src='/icons/yast-system-user.png'/><%=_("Administrator Settings")%></div>
+<div class='plugin-icon'><img alt="yast-system-user" src='/icons/yast-system-user.png'/><%=_("Administrator Settings")%></div>
 
 <div class="plugin-content grid_12">
 <% content_for :head do %>
