--- a/plugins/mail/app/views/mail/index.html.erb
+++ b/plugins/mail/app/views/mail/index.html.erb
@@ -53,7 +53,7 @@
 
 <% end %>
 
-<div class='plugin-icon'><img src='/icons/yast-mail-server.png'/><%=_("Mail Settings")%></div>
+<div class='plugin-icon'><img alt="yast-mail-server" src='/icons/yast-mail-server.png'/><%=_("Mail Settings")%></div>
 
 <div class='plugin-content grid_12'>
 
