--- a/plugins/users/app/views/groups/index.html.erb
+++ b/plugins/users/app/views/groups/index.html.erb
@@ -105,7 +105,7 @@ function disable(which){
 <% end %>
 
 <% end %>
-<div class='plugin-icon'><img src='/icons/yast-groups.png'/><%=_("Groups")%></div>
+<div class='plugin-icon'><img alt="yast-groups" src='/icons/yast-groups.png'/><%=_("Groups")%></div>
 <div class="plugin-content grid_12">
 
 <form action="#" id="quicksearch" class="pad1_2em">
