--- a/plugins/users/app/views/groups/new.html.erb
+++ b/plugins/users/app/views/groups/new.html.erb
@@ -76,7 +76,7 @@
 </script>
 <%
  disabled = ! ((@permissions[:groupadd] && @adding) || (@permissions[:groupmodify] && !@adding)) %>
-<div class='plugin-icon'><img src='/icons/yast-groups.png' alt="groups module"/>
+<div class='plugin-icon'><img alt="yast-groups" src='/icons/yast-groups.png' alt="groups module"/>
   <%=_("Groups") + header_spacer %>
   <%= _("Add new group") %>
 </div>
